# python-package-template

./: README.md  pyproject.toml
docs/: conf.py  index.rst  main.rst
src/package_name/: main.py
test/package_name_tests/: test_main.py
